# pycct

./: .gitignore  Makefile  README.md  pyproject.toml
examples/lsa/: lsa.py  lsa_increment_last.py  test_lsa.py
src/pycct/: __init__.py  base.py  dpo.py  fingraph.py  finset.py
tests/: test_dpo.py  test_fingraph.py  test_finset.py
