[project]
name = "pycct"
version = "0.0.1"
requires-python = ">=3.7"

[project.optional-dependencies]
style = [
    "black~=23.1",
    "mypy==1.3.0",
    "ruff==0.0.270",
]
test = ["pytest>=7.2.0"]

[build-system]
requires = ["setuptools>=65", "wheel>=0.38"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119
target-version = ["py311"]

[tool.ruff]
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2